@@ -1,6 +1,7 @@
 package com.kuit.agarang.global.s3.utils;
 
 import com.kuit.agarang.global.common.exception.exception.BusinessException;
+import com.kuit.agarang.global.common.exception.exception.FileException;
 import com.kuit.agarang.global.common.model.dto.BaseResponseStatus;
 import com.kuit.agarang.global.s3.model.dto.S3File;
 import com.kuit.agarang.global.s3.model.enums.ContentType;
@@ -9,67 +10,75 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
 import java.io.IOException;
+import java.net.URL;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.Optional;
 import java.util.UUID;
 
-@Component
 @Slf4j
+@Component
 public class S3FileUtil {
 
   @Value("${aws.s3.upload.tempPath}")
   private String tempPath;
 
-  private S3File convert(MultipartFile file) throws Exception {
+  public S3File convert(MultipartFile file) {
     ContentType contentType = getContentType(file)
       .orElseThrow(() -> new BusinessException(BaseResponseStatus.INVALID_FILE_EXTENSION));
-    return S3File.builder()
-      .filename(createCleanedFilename(file, contentType))
-      .contentType(contentType)
-      .contentLength(file.getSize())
-      .bytes(file.getBytes())
-      .build();
+    try {
+      return S3File.builder()
+        .filename(createCleanedFilename(file.getOriginalFilename(), contentType))
+        .contentType(contentType)
+        .contentLength(file.getSize())
+        .bytes(file.getBytes())
+        .build();
+    } catch (IOException e) {
+      throw new FileException(BaseResponseStatus.FAIL_FILE_READ);
+    }
   }
 
-  public S3File uploadTempFile(MultipartFile file) throws Exception {
-    S3File s3File = convert(file);
-    uploadTempFile(s3File);
-    return s3File;
+  private Path createDirectory(String path) throws IOException {
+    Path directory = Paths.get(path);
+    if (!Files.exists(directory)) {
+      Files.createDirectories(directory);
+    }
+    return directory;
   }
 
-  private void uploadTempFile(S3File s3File) throws IOException {
-    File directory = new File(tempPath + s3File.getContentType().getPath());
-    if (!directory.exists()) directory.mkdirs();
-
-    File file = new File(tempPath, s3File.getFilename());
-    if (file.createNewFile()) {
-      try (FileOutputStream fos = new FileOutputStream(file)) {
-        fos.write(s3File.getBytes());
+  public void delete(Path target) {
+    if (target != null && Files.exists(target)) {
+      try {
+        Files.delete(target);
+      } catch (IOException e) {
+        log.error("로컬 파일 삭제에 실패했습니다.");
       }
     }
   }
 
-  public void deleteTempFile(S3File s3File) {
-    File file = new File(tempPath + s3File.getFilename());
-    if (file.exists()) {
-      if (file.delete()) {
-        log.info("임시 업로드 파일이 성공적으로 삭제되었습니다. [{}]", file.getPath());
-        return;
-      }
-      log.info("임시 업로드 파일 삭제를 실패했습니다. [{}]", file.getPath());
-    }
-  }
+  public S3File downloadAudioUrl(String urlString) {
+    Path target = null;
+    try {
+      Path directory = createDirectory(tempPath);
+      String filename = createFilename("download.mp3");
 
-  public byte[] getTempFile(S3File s3File) throws IOException {
-    File file = new File(tempPath, s3File.getFilename());
-    if (!file.exists()) {
-      throw new IOException("임시 파일을 찾을 수 없습니다. : " + s3File.getFilename());
-    }
-    try (FileInputStream fis = new FileInputStream(file)) {
-      return fis.readAllBytes();
+      target = directory.resolve(filename); // ./temp/uuid_download.mp3
+
+      URL url = new URL(urlString);
+      Files.copy(url.openStream(), target, StandardCopyOption.REPLACE_EXISTING);
+      return S3File.builder()
+        .filename(ContentType.MP3.getPath() + filename)
+        .contentType(ContentType.MP3)
+        .contentLength(Files.size(target))
+        .bytes(Files.readAllBytes(target))
+        .build();
+    } catch (IOException e) {
+      throw new FileException(BaseResponseStatus.FAIL_FILE_READ);
+    } finally {
+      delete(target);
     }
   }
 
@@ -79,9 +88,13 @@ public class S3FileUtil {
     return ContentType.of(extension);
   }
 
-  private String createCleanedFilename(MultipartFile file, ContentType contentType) {
+  private String createCleanedFilename(String filename, ContentType contentType) {
     // 모든 (/), (\), ( ) -> (_) 로 대체
-    String cleanedFilename = file.getOriginalFilename().replaceAll("[/\\\\\\s]+", "_");
-    return contentType.getPath() + UUID.randomUUID() + "_" + cleanedFilename;
+    String cleanedFilename = filename.replaceAll("[/\\\\\\s]+", "_");
+    return contentType.getPath() + createFilename(cleanedFilename);
+  }
+
+  private String createFilename(String filename) {
+    return UUID.randomUUID() + "_" + filename;
   }
 }
